--- a/about.html
+++ b/about.html
@@ -11,20 +11,20 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "about.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "about.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/main-favicon.ico?crc=218926716"/>
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=146465811"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4170622918" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=247483590"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=3798146176" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=3941279405"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=392840858" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=41670854"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=3817362181" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -42,15 +42,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="gradient clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu67883-3"><!-- column -->
      <div class="clearfix colelem" id="pu67883-3"><!-- group -->
-      <div class="clearfix grpelem shared_content" id="u67883-3" data-IBE-flags="txtStyleSrc" data-content-guid="u67883-3_content"><!-- content -->
-       <p>&nbsp;</p>
+      <div class="browser_width grpelem" id="u67883-3-bw">
+       <div class="clearfix shared_content" id="u67883-3" data-IBE-flags="txtStyleSrc" data-content-guid="u67883-3_content"><!-- content -->
+        <p>&nbsp;</p>
+       </div>
       </div>
       <nav class="MenuBar clearfix grpelem" id="menuu56290"><!-- horizontal box -->
        <div class="MenuItemContainer clearfix grpelem" id="u56291"><!-- vertical box -->
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u56292" href="index.html" data-href="page:U93"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u56293-4"><!-- content --><p class="shared_content" data-content-guid="u56293-4_0_content">Home</p></div></a>
        </div>
        <div class="MenuItemContainer clearfix grpelem" id="u67345"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox transition clearfix colelem" id="u67346" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67347-4"><!-- content --><p class="shared_content" data-content-guid="u67347-4_0_content">About</p></div><div class="grpelem" id="u67348"><!-- content --></div></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox transition clearfix colelem" id="u67346" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67347-4"><!-- content --><p class="shared_content" data-content-guid="u67347-4_0_content">About</p></div></a>
         <div class="SubMenu MenuLevel1 clearfix" id="u67350"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem" id="u67351"><!-- vertical box -->
           <li class="MenuItemContainer clearfix colelem" id="u67601"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u67605" href="contact.html" data-href="page:U312"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67613-4" data-IBE-flags="txtStyleSrc"><!-- content --><div id="u67613-3" class="shared_content" data-content-guid="u67613-3_content"><p>Contact</p></div></div></a></li>
@@ -64,7 +66,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u67436" href="programme.html" data-href="page:U276"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67438-4"><!-- content --><p class="shared_content" data-content-guid="u67438-4_0_content">Programme</p></div></a>
        </div>
        <div class="MenuItemContainer clearfix grpelem" id="u67475"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u67476" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67479-4"><!-- content --><p class="shared_content" data-content-guid="u67479-4_0_content">Booking</p></div><div class="grpelem" id="u67477"><!-- content --></div></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u67476" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67479-4"><!-- content --><p class="shared_content" data-content-guid="u67479-4_0_content">Booking</p></div></a>
         <div class="SubMenu MenuLevel1 clearfix" id="u67480"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem" id="u67481"><!-- vertical box -->
           <li class="MenuItemContainer clearfix colelem" id="u67643"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u67647" href="book---pay.html" data-href="page:U7236"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67655-4" data-IBE-flags="txtStyleSrc"><!-- content --><div id="u67655-3" class="shared_content" data-content-guid="u67655-3_content"><p>Book + Pay</p></div></div></a></li>
@@ -76,7 +78,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u67520" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67522-4"><!-- content --><p class="shared_content" data-content-guid="u67522-4_0_content">Attending</p></div></a>
        </div>
        <div class="MenuItemContainer clearfix grpelem" id="u67559"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u67562" href="memories.html" data-href="page:U336"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67563-4"><!-- content --><p class="shared_content" data-content-guid="u67563-4_0_content">Memories</p></div><div class="grpelem" id="u67565"><!-- content --></div></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u67562" href="memories.html" data-href="page:U336"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67563-4"><!-- content --><p class="shared_content" data-content-guid="u67563-4_0_content">Memories</p></div></a>
         <div class="SubMenu MenuLevel1 clearfix" id="u67560"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem" id="u67561"><!-- vertical box -->
           <li class="MenuItemContainer clearfix colelem" id="u67727"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u67731" href="school-photos.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67739-4" data-IBE-flags="txtStyleSrc"><!-- content --><div id="u67739-3" class="shared_content" data-content-guid="u67739-3_content"><p>School Photos</p></div></div></a></li>
@@ -85,7 +87,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </nav>
       <div class="clip_frame grpelem" id="u60864"><!-- image -->
-       <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9314285714285714" data-image-width="175" data-image-height="163" src="images/blank.gif?crc=4208392903"/>
+       <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9352941176470588" data-image-width="170" data-image-height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
      <!-- m_editable region-id="editable-static-tag-U4003-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
@@ -146,7 +148,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="index.html" data-href="page:U93" data-orig-id="u56292"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u56293-4"><!-- content --><span class="placeholder" data-placeholder-for="u56293-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u67345"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox transition clearfix colelem temp_no_id" href="about.html" data-href="page:U252" data-orig-id="u67346"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67347-4"><!-- content --><span class="placeholder" data-placeholder-for="u67347-4_0_content"><!-- placeholder node --></span></div><div class="grpelem temp_no_id" data-orig-id="u67348"><!-- content --></div></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox transition clearfix colelem temp_no_id" href="about.html" data-href="page:U252" data-orig-id="u67346"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67347-4"><!-- content --><span class="placeholder" data-placeholder-for="u67347-4_0_content"><!-- placeholder node --></span></div></a>
         <div class="SubMenu MenuLevel1 clearfix temp_no_id" data-orig-id="u67350"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem temp_no_id" data-orig-id="u67351"><!-- vertical box -->
           <li class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u67601"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="contact.html" data-href="page:U312" data-orig-id="u67605"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-IBE-flags="txtStyleSrc" data-orig-id="u67613-4"><!-- content --><span class="placeholder" data-placeholder-for="u67613-3_content"><!-- placeholder node --></span></div></a></li>
@@ -160,7 +162,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="programme.html" data-href="page:U276" data-orig-id="u67436"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67438-4"><!-- content --><span class="placeholder" data-placeholder-for="u67438-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u67475"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="booking.html" data-href="page:U12766" data-orig-id="u67476"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67479-4"><!-- content --><span class="placeholder" data-placeholder-for="u67479-4_0_content"><!-- placeholder node --></span></div><div class="grpelem temp_no_id" data-orig-id="u67477"><!-- content --></div></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="booking.html" data-href="page:U12766" data-orig-id="u67476"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67479-4"><!-- content --><span class="placeholder" data-placeholder-for="u67479-4_0_content"><!-- placeholder node --></span></div></a>
         <div class="SubMenu MenuLevel1 clearfix temp_no_id" data-orig-id="u67480"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem temp_no_id" data-orig-id="u67481"><!-- vertical box -->
           <li class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u67643"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="book---pay.html" data-href="page:U7236" data-orig-id="u67647"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-IBE-flags="txtStyleSrc" data-orig-id="u67655-4"><!-- content --><span class="placeholder" data-placeholder-for="u67655-3_content"><!-- placeholder node --></span></div></a></li>
@@ -172,7 +174,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="attending.html" data-href="page:U324" data-orig-id="u67520"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67522-4"><!-- content --><span class="placeholder" data-placeholder-for="u67522-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u67559"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U336" data-orig-id="u67562"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67563-4"><!-- content --><span class="placeholder" data-placeholder-for="u67563-4_0_content"><!-- placeholder node --></span></div><div class="grpelem temp_no_id" data-orig-id="u67565"><!-- content --></div></a>
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U336" data-orig-id="u67562"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67563-4"><!-- content --><span class="placeholder" data-placeholder-for="u67563-4_0_content"><!-- placeholder node --></span></div></a>
         <div class="SubMenu MenuLevel1 clearfix temp_no_id" data-orig-id="u67560"><!-- vertical box -->
          <ul class="SubMenuView clearfix colelem temp_no_id" data-orig-id="u67561"><!-- vertical box -->
           <li class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u67727"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="school-photos.html" data-href="page:U4097" data-orig-id="u67731"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-IBE-flags="txtStyleSrc" data-orig-id="u67739-4"><!-- content --><span class="placeholder" data-placeholder-for="u67739-3_content"><!-- placeholder node --></span></div></a></li>
@@ -277,7 +279,7 @@ var suppressMissingFileError = false
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){f(!0)},5E3):f()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","jquery.watch","webpro","musewpdisclosure","jquery.museresponsive"],function(c){var $ = c;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.musemenu","webpro","musewpdisclosure","jquery.museresponsive"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
